DSE backports
 * Fix DynamicEndpointSnitch noop in multi-datacenter situations (CASSANDRA-13074)
 * Backport TimeWindowCompactionStrategy (APOLLO-15)
 * Fix merkle tree depth calculation (CASSANDRA-12580)
 * Avoid assertion error when IndexSummary > 2G (CASSANDRA-12014)
 * Allow the prepared statement cache size to be changed. (APOLLO-50)
 * Forward writes to replacement node when replace_address != broadcast_address (CASSANDRA-8523)
 * Fix authentication problem when invoking cqlsh copy from a SOURCE command (CASSANDRA-12642)
 * Decommissioned nodes will not rejoin the cluster (CASSANDRA-8801)
 * Only set broadcast_rpc_address on Ec2MultiRegionSnitch if it's not set (CASSANDRA-11356)
 * Log endpoint and port associated with streaming operation (CASSANDRA-8777)
 * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
 * Don't write shadowed range tombstone (CASSANDRA-12030)
 * Reduce contention getting instances of CompositeType (CASSANDRA-10433)

2.1.17
 * Fix race causing infinite loop if Thrift server is stopped before it starts listening (CASSANDRA-12856)
 * cqlsh copy-from: sort user type fields in csv (CASSANDRA-12959)
 * Fix missed signal when commit log segments are recycled (CASSANDRA-13037)
 * Fix RecoveryManagerTruncateTest (CASSANDRA-12802)
 * Don't skip sstables based on maxLocalDeletionTime (CASSANDRA-12765)

2.1.16
 * Avoid infinitely looping result set when paging SELECT queries with
   an IN clause with duplicate keys by treating the IN values as a set instead
   of a list (CASSANDRA-12420)
 * Add system property to set the max number of native transport requests in queue (CASSANDRA-11363)
 * Include column family parameter when -st and -et are provided (CASSANDRA-11866)
 * Fix queries with empty ByteBuffer values in clustering column restrictions (CASSANDRA-12127) 
 * Disable passing control to post-flush after flush failure to prevent data loss (CASSANDRA-11828)