@@ -1,4 +1,5 @@
 DSE backports
+ * Close window between create table keyspace validation and read of serialized keyspace (APOLLO-273)
  * Fix DynamicEndpointSnitch noop in multi-datacenter situations (CASSANDRA-13074)
  * Backport TimeWindowCompactionStrategy (APOLLO-15)
  * Fix merkle tree depth calculation (CASSANDRA-12580)
